sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: value +=- is not a member of Int
		max+=-1
                   ^